# nlp_exercise

./: README.md  partA.ipynb  partB.ipynb  pyproject.toml
paraphrased_text/: bart_paraphrased_text1.txt  bart_paraphrased_text2.txt  benchmark_chatgpt_text1.txt  benchmark_chatgpt_text2.txt  chatgpt_t5_paraphrased_text1.txt  chatgpt_t5_paraphrased_text2.txt  fixed_sentence1.txt  fixed_sentence2.txt  pegasus_paraphrased_text1.txt  pegasus_paraphrased_text2.txt  sentence1.txt  sentence2.txt  text2.txt
