[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "nlp project for uni"
authors = ["Antonis Lempesis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = ">=1.18.5,<2.0.0"
matplotlib = "^3.10.1"
torch = "^2.6.0"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
transformers = "^4.51.3"
sentencepiece = "^0.2.0"
protobuf = "^6.31.0"
seaborn = "^0.13.2"
sentence-transformers = "^4.1.0"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
